--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-blur": "^8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-hook-form": "^5.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-safe-area-context": "^0.6.0",
