--- a/app.json
+++ b/app.json
@@ -1,12 +1,16 @@
 {
   "expo": {
-    "name": "chatMobile",
-    "slug": "chatMobile",
+    "name": "Trail Buddy",
+    "slug": "trail-buddy",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
+    "android": {
+      "package": "com.example.user.trailbuddy",
+      "versionCode": 1
+    },
     "version": "1.0.0",
     "sdkVersion": "37.0.0",
     "orientation": "portrait",
