--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react-hook-form": "^5.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^2.8.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
